Russia Content (Anatolia end chain), some flavour changes
- During the Turkish Revolt in the end of the Russia chain in Middle East, Azeris will join Turks in revolting
- Added province modifiers that will make the Turkish Revolt last longer
- Turkey will now properly shed debuffs from puppet era
- Greece will now properly core Smyrna state after Ionian Revolt
- Russia now gets Fate of Anatolia event after annexing rump Turkish Revolt with 4 options: incorporate into Empire as Anatoliyskiy Krai, add Greeks as accepted culture; Give Anatolia to Greece; Give Anatolia and Bosphorus to Greece; release rump Turkish puppet. If Greece is AI, it will become a puppet state in 2nd and 3rd option.
- If Russia annexes the region, it will have an event option to expel Ottoman Elite to Central Asia
- Ankara should no longer get to wild 50% soldiers, deported soldiers from the Balkans after liberations will first demote to farmers
- Rubber temporarily nerfed until a solution is found for 1880s crash (mostly coming from plantation events, to be tested)
- Western Bulgaria Vilayet will now properly be called as such after Crimean War victory

--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -253,7 +253,7 @@ ANT_proletarian_dictatorship;Laïkí Dimokratía tis Anatolías;x;
 ANT_presidential_dictatorship;Dimokratía tis Anatolías;x;
 ANT_bourgeois_dictatorship;Dimokratía tis Anatolías;x;
 ANT_fascist_dictatorship;Krátos tis Anatolías;x;
-ANT_colonial_company;Eléftheri Politeía tis Anatolías;x;
+ANT_colonial_company;Anatoliyskiy Krai;x;
 ANT_dominion;Eléftheri Politeía tis Anatolías;x;
 ANT_ADJ;Anatolikós;x;
 #### AOT ####;
@@ -4249,7 +4249,7 @@ MCD_proletarian_dictatorship;Sosialistikó Krátos tis Makedonías;x;
 MCD_presidential_dictatorship;Eléfthero Krátos Makedonías;x;
 MCD_bourgeois_dictatorship;Eléfthero Krátos Makedonías;x;
 MCD_fascist_dictatorship;Megáli Makedonikí Dimokratía;x;
-MCD_colonial_company;Protektoráto Makedonías;x;
+MCD_colonial_company;Vilayet Zapadnaya Bolgariya;x;
 MCD_dominion;Protektoráto Makedonías;x;
 MCD_ADJ;Makedónas;x;
 ##### MCK #####;
