--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -425,6 +425,12 @@ EVTNAME500290;Question of Pacifican Ports;;;;;;;;;;;;;x
 EVTDESC500290;Some years ago we have granted self-rule to our colonies in America, creating the Dominion of Russian America. However, several key ports were kept in direct Imperial control for strategic purposes. Now, some decades later, our Dominion is asking whether it is time to grant self-rule to these port towns as well.;;;;;;;;;;;;;x
 EVTOPTA500290;Yes, we trust they will use them well;;;;;;;;;;;;;x
 EVTOPTB500290;They will stay in the hands of Imperial Pacific Navy;;;;;;;;;;;;;x
+EVTNAME500291;Fate of Anatolia;;;;;;;;;;;;x
+EVTDESC500291;The Turkish Emirates have begun their path to greatness by conquering Anatolia from the last rump vestiges of the Roman Empire. And now it is over where it had began. The Turkish Rebellion has been crushed, we are in full control of the countryside, although, some have decided to make it to the mountains and keep fighting us from there. No matter. Russia stands triumphant over its century long archnemesis, and now the time has come to decide the faith of these lands.;;;;;;;;;;;;;x
+EVTOPTA500291;Incorporate Anatolia into the Empire as a Krai governed by a Namestnik - accept Greeks as our own, deport Ottoman elites to Central Asia;;;;;;;;;;;;x
+EVTOPTB500291;Give it to our Greek Allies, but keep the Bosphorus;;;;;;;;;;;;x
+EVTOPTC500291;Give it to our Greek Allies, as well as the Boshporus;;;;;;;;;;;;x
+EVTOPTD500291;Release a rump Turkish puppet state;;;;;;;;;;;;x
 EVTDESC500292;Nikolai Ivanovich Achinov, a Russian adventurer and burgess of Penza, visited Abyssinia in 1883 with the intention of establishing religious and political links between the two countries. After returning to Russia, Achinov announced his intention to lead an expedition to the Gulf of Tadjoura to establish a settlement in 1888, claiming to be a free Cossack. Achinov assured the participants that Mohammed Loitah had leased him land in the area in perpetuity. On his own initiative and without the involvement of the Russian government, Achinov departed on 10 December 1888 with 165 Terek Cossacks and arrived in the Gulf of Tadjoura on 6 January 1889. A group of Ethiopian clergymen greeted the expedition at the shore. The French Government, that has interests in Somaliland, demands an explanation of our government.;;;;;;;;;;;;;x
 EVTNAME500292;Expedition to Gulf of Tadjoura;;;;;;;;;;;;;x
 EVTOPTA500292;Denounce and distance us from the renegade Cossack;;;;;;;;;;;;;x
@@ -434,6 +440,10 @@ EVTDESC500293;Proletarskaya Kultura or Proletkult for short, is a movement and o
 EVTOPTA500293;Give them funding and autonomy.;;;;;;;;;;;;;x
 EVTOPTB500293;Give them funding under state oversight.;;;;;;;;;;;;;x
 EVTOPTC500293;Ban this organisation.;;;;;;;;;;;;;x
+EVTDESC500292;What is to be done with these restless efendis?;;;;;;;;;;;;;x
+EVTNAME500292;Ottoman Elites Fate;;;;;;;;;;;;;x
+EVTOPTA500292;Deport them to Central Asia;;;;;;;;;;;;;x
+EVTOPTB500292;Leave them be;;;;;;;;;;;;;x
 EVTDESC530001;On a night in $YEAR$, a fire broke out on the 3rd floor of J. L. Van Doren, Oil Merchant and Stearin Candle Manufacturer, known as a seller of whale oil, at 34 New Street in Manhattan, and spread quickly to adjoining buildings. During the ten and a half hours that it burned, the fire killed 4 Firefighters and 26 civilians and in total destroyed 345 buildings, resulting in property damage estimated between 5 and 10 million dollars. \n \n The fire would be the last of three devastating fires that affected the city, the other two occurring in 1776 & 1835. While very destructive, the $YEAR$ fire confirmed the value of building codes restricting wood-frame construction, which were put in place after the lessons learnt from the previous fires.;;;;;;;;;;;;;x
 EVTNAME530001;The Great New York City Fire of $YEAR$;;;;;;;;;;;;;x
 EVTOPTA530001;Fully fund reconstruction efforts.;;;;;;;;;;;;;x
@@ -2048,7 +2058,7 @@ EVTDESC500198;The colony of $COUNTRY_ADJ$ America, composed of Alaska from the n
 EVTOPTA500198;This can only be good for the empire.;;;;;;;;;;;;;x
 EVTOPTB500198;No, they shall remain under our direct control.;;;;;;;;;;;;;x
 EVTOPTC500198;Onwards to Russian America!;;;;;;;;;;;;x
-EVTNAME500197;Faith of Armenia;;;;;;;;;;;;x
+EVTNAME500197;Fate of Armenia;;;;;;;;;;;;x
 EVTDESC500197;The Territory of Armenia has always been of particular interest of our state. Armenians and their Apostolic Church has been if not cordial, then tolerated by the government. Many important Russians are of Armenian origin, and many Armenians have served us well in governing the Caucasus. Now that we have finally liberated the Western Armenian Plateau from the Ottoman yoke, millions of Armenians can now rest assured they are safe and free to practice their religion and culture. However, there remains a question of government. Should we create a vassal state of Armenia, to encompass all these new lands under a friendly monarchy, or are we to make Armenian Principalities direct parts of our Empire?;;;;;;;;;;;;;x
 EVTOPTA500197;Incorporate Armenia into the Empire.;;;;;;;;;;;;x
 EVTOPTB500197;Free them as an independent nation in former Ottoman lands;;;;;;;;;;;;x
