--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1542,3 +1542,7 @@ under_the_british_crown;Under the British Crown;;;;;;;;;;;;;x
 under_the_british_crown_desc;We are subjects of Great Britain;;;;;;;;;;;;;x
 concert_of_europe_gp;Concert of Europe - Traditional Great Power Status;;;;;;;;;;;;;x
 concert_of_europe_gp_desc;After the Congress of Vienna, the power on the world stage was concentrated between 5 Great Powers - Britain, France, Russia, Austria and Prussia. Success of them working together fluctuated throughout decades, but one thing remained constant: their status. It was not until late 19th and early 20th century that other countries started being considered their equals: such as Italy and the United States.;;;;;;;;;;;;;x
+turkish_revolt;Turkish Revolt;;;;;;;;;;;;;x
+turkish_revolt_desc;Turkic and other Sunni peoples are rising in revolt against us;;;;;;;;;;;;;x
+campaign_more_conversion;Active Religious Campaign;;;;;;;;;;;;;x
+campaign_more_conversion_desc;We are helping missionaries and the religious institutions to convert those who do not follow our religion.;;;;;;;;;;;;x
