--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -20,6 +20,7 @@ ANG;Angola;;;;;;;;;;;;;x
 ANH;Anhalt-Dessau;;;;;;;;;;;;;x
 ANK;Anhalt-Köthen;;;;;;;;;;;;;x
 ANT;Anatolia;;;;;;;;;;;;;x
+ANT_colonial_company;Anatolian Krai;;;;;;;;;;;;;x
 AOT;Aotearoa;Aotearoa;Aotearoa;;;;;;;;;;;x
 ARA;Arabia;;;;;;;;;;;;;x
 ARC;Argentina;;;;;;;;;;;;;x
@@ -404,6 +405,7 @@ MAS;Massina;Macina;Massina;;;;;;;;;;;x
 MAT;Matabele;Matabele;Matabele;;;;;;;;;;;x
 MAU;Mauritius;;;;;;;;;;;;;x
 MCD;Macedonia;;;;;;;;;;;;;x
+MCD_colonial_company;Vilayet of Western Bulgaria;;;;;;;;;;;;;x
 MCK;Manchuria;;;;;;;;;;;;;x
 MDR;Madeiras;;;;;;;;;;;;;x
 MDV;Moldova;;;;;;;;;;;;;x
