--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -1,5 +1,6 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
 african_integration_policy;African Integration Enacted;;;;;;;;;;;;;x
+amir_kabir_attending;Appointed Amir Kabir;;;;;;;;;;;;;x
 berlin_conference;Berlin Conference Happened;;;;;;;;;;;;;x
 civilizing_congo;Civilizing the Congo;;;;;;;;;;;;;x
 direct_immigration;Enabled Direct Immigration;;;;;;;;;;;;;x
@@ -21,8 +22,11 @@ liberal_revolution_in_progress;Liberal Revolution Happening;;;;;;;;;;;;;x
 liberal_revolution_somewhere;Liberal Revolution Happening Somewhere;;;;;;;;;;;;;x
 liberal_revolutions_should_now_fire;Liberal Revolution Imminent;;;;;;;;;;;;;x
 local_government_reform_blocker;Local Government Reform Blocker;;;;;;;;;;;;;x
+naser_in_europe;The Shah's Tour of Europe;;;;;;;;;;;;;x
 native_assimilation_enacted;Native Assimilation Enacted;;;;;;;;;;;;;x
+new_fancy_palace_modifier;New Palace;;;;;;;;;;;;;x
 new_world_nation;New World Nation;;;;;;;;;;;;;x
+persian_cossacks_modifier;Persian Cossack Brigade;;;;;;;;;;;;;x
 pol_reform_blocker;Political Reform Blocker;;;;;;;;;;;;;x
 soc_reform_blocker;Social Reforms Blocked;;;;;;;;;x
 post_colonial_country;Former Colony;;;;;;;;;;;;;x
@@ -32,6 +36,7 @@ serfdom_not_abolished;Serfdom not abolished;;;;;;;;;;;;;x
 slave_revolution;Slave Revolution;;;;;;;;;;;;;x
 soc_reform_blocker;Social Reform Blocker;;;;;;;;;;;;;x
 the_slavery_debate;The Slavery Debate;;;;;;;;;;;;;x
+turkmenchay_treaty;Turkmenchay Treaty;;;;;;;;;;;;;x
 using_foreign_ships;Using Foreign Ships;;;;;;;;;;;;;x
 using_foreign_shipyards;Using Foreign Shipyards;;;;;;;;;;;;;x
 using_foreign_weapons;Using Foreign Weapons;;;;;;;;;;;;;x
