--- a/TGC/localisation/00_events_0100000.csv
+++ b/TGC/localisation/00_events_0100000.csv
@@ -1,4 +1,7 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
+EVTDESC100011;After our recent losses in Indochina, our precious possesions in Laos have become unreachable without trepassing other countries' borders. This situation has lead to our complete inability to manage those lands or to control them. Sadly for us, many people there tried to take an advantage from this void of power and now Laos is basically in their hands. As we can't even get there, they've dared to declare their independence from us!;;;;;;;;;;;;;x
+EVTNAME100011;The Independence of Laos;;;;;;;;;;;;;x
+EVTOPTA100011;We'll be back, sooner or later…;;;;;;;;;;;;;x
 EVTDESC100012;Huge iron deposits have been discovered near cerro el Pao in Angostura, the deposits are so rich and of such high quality, international buyers are lining up to acquire our iron!;;;;;;;;;;;;;x
 EVTNAME100012;Iron boom in Angostura!;;;;;;;;;;;;;x
 EVTOPTA100012;Brilliant!;;;;;;;;;;;;;x
