Yugoslavia and Zapadoslavia
- Yugoslavia and Zapadoslavia when formed by Russia will be Dominions, they will have a shade of green corresponding to mimic Russian substates in this specific scenario
- Changed flags of YUG/WSF dominion to correspond to that
- Zapadoslavia will now start with Sorbians as accepted culture and get cores on LUZ provinces

--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -7842,8 +7842,8 @@ YUG_proletarian_dictatorship;Socijalisticka Federativna Republika Jugoslavija;x;
 YUG_presidential_dictatorship;Demokratska Federativna Jugoslavija;x;
 YUG_bourgeois_dictatorship;Demokratska Federativna Jugoslavija;x;
 YUG_fascist_dictatorship;Jugoslovenska Nacija;x;
-YUG_colonial_company;Protektorat Jugoslavije;x;
-YUG_dominion;Protektorat Jugoslavije;x;
+YUG_colonial_company;Protektorat Jugoslavija;x;
+YUG_dominion;Kraljevina Jugoslavija;x;
 YUG_ADJ;Jugoslovenski;x;
 #### YZW ####;
 YZW_absolute_monarchy;Yonezawa-han;x;
