--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3513,3 +3513,9 @@ disputed_territories_por_desc;Taken from Portugal in the 1809 Spanish-Portuguese
 disputed_territories_por_title;Disputed Territories;;;;;;;;;;;;;x
 morocco_reconquest_por_desc;We have completed our reconquest of Olivenca and Rubias from Spain, and now it is time to look further. Ceuta, Tangiers, and Ifni were once our holdings but have been lost for quite some time now. With Spanish influence gone, our time to strike is now...;;;;;;;;;;;;;x
 morocco_reconquest_port_title;Moroccan Reconquest;;;;;;;;;;;;;x
+warden_line_desc;Captain Henry Douglas Warden, British Resident among the tribes living beyond the Frontier to the North-East, has proposed proclaiming sovereignty over the region of Transorangia, or the land North of the Orange river. The Orange River Sovereignty would allow us to create a new northward buffer towards the Boers and the Sotho, give us new opportunities to exploit possible resources and allow us to expand further.;;;;;;;;;;;;;x
+warden_line_title;The Warden Line;;;;;;;;;;;;;x
+claim_northern_cape_title;Claim Northern Cape;;;;;;;;;;;;;x
+claim_northern_cape_desc;The Northern Cape is Boer territory and rightfully belongs as part of our nation.;;;;;;;;;;;;;x
+tugela_river_convention_desc;The Boers of the Natal are becoming increasingly resistant to colonial rule. The time has come to meet with them at Pietermaritzburg and discuss the terms of their independence, preferably subject to our conditions, which are that they abandon all laws allowing slavery and that our influence within their borders remain strong.;;;;;;;;;;;;;x
+tugela_river_convention_title;Tugela River Convention;La convention d'Tugela River;Tugela River Convention;;;;;;;;;;;x
