--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -2,3 +2,11 @@ CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;
 election_tool_tip;Election Events will run normally.§b;;;;;;;;;;;;x
 election_tool_tip_muted;Election Events will be §Gmuted§!, but their results will be §Yrandom§!.§b;;;;;;;;;;;;x
 override_tool_tip;Activate:§G National Campaign.§! \n\n§RWARNING:§! National Campaigns will take a significant amount of money daily! Be careful otherwise you WILL bankrupt!§b;;;;;;;;;;;;x
+majority_coup_check_tooltip;§RWarning:§! The outcome will change based on Pedro's age. \nYou will be able to back down before confirming the coup.§b;;;;;;;;;;;;x
+rio_grande_peace_deal_tooltip;§RWarning:§! The negotiations options will changed based on the war. They are §Gwilling§! to negotiate, but multiple failed negotiating attempts can make the situation worse.§b;;;;;;;;;;;;x
+farroupilha_negotiation3;Too many negotiations;;;;;;;;;;;;x
+election_tool_tip;Election Events will run normally.§b;;;;;;;;;;;;x
+election_tool_tip_muted;Election Events will be §Gmuted§!, but their results will be §Yrandom§!.§b;;;;;;;;;;;;x
+override_tool_tip;Activate:§G National Campaign.§! \n\n§RWARNING:§! National Campaigns will take a significant amount of money daily! Be careful otherwise you WILL bankrupt!§b;;;;;;;;;;;;x
+claim_tooltip;Get a §YClaim§! on: \n    Misiones \n    Easterm Misiones\n    Corrientes\n    Entre Rios\n    Palma Suela§b;;;;;;;;;;;;x
+acquire_all_claims;Acquire all claimed land;;;;;;;;;;;;x
