--- a/TGC/localisation/00_events_1000000.csv
+++ b/TGC/localisation/00_events_1000000.csv
@@ -764,6 +764,9 @@ EVTOPTB9000009;A Dutch King;;;;;;;;;;;;;x
 EVTDESC9000010;We have lost our war to gain the Lowlands for Germany, as the loosers we must accept the treaty that was imposed on us. This will be end of Germany, as the winners seek to restablish the German region as a bunch of republics,kingdoms, and everything in between.;;;;;;;;;;;;;x
 EVTNAME9000010;Treaty of German Containment;;;;;;;;;;;;;x
 EVTOPTA9000010;This is the end;;;;;;;;;;;;;x
+EVTDESC9000011;We have lost. Our Fatherland is in rubble. As the losers we must accept the treaty that was imposed on us. This will be end of Germany, as the winners seek to restablish the German region with a plethora of small countries that are easy to control.;;;;;;;;;;;;;x
+EVTNAME9000011;Treaty of German Containment;;;;;;;;;;;;;x
+EVTOPTA9000011;This is the End;;;;;;;;;;;;;x
 EVTNAME9111111;The Dutch Question;;;;;;;;;;;;;x
 EVTDESC9111111;The meeting we called over the status of our Dutch neighbors has nearly come to and end, though there is a split between our top officals on how excatly the solution should look like. The militarist are calling for the full invasion of the Lowlands and integrating the Netherlands and Flanders with the French port of Dunkerque. The militarist have already laid out their plan for the invasion, though it is expected that the invasion will attract the attention the Russians and British. The moderates see the value of the lowlands vastly overstated and to much of a strain on the nation to maintain control over them. §RNOTE: The peacedeal will be offered to you by an event should you manage to peace out French, the Dutch, and Belgium (should they exist).§W;;;;;;;;;;;;;x
 EVTOPTA9111111;The Militarist are correct prepare for war!;;;;;;;;;;;;;x
