Star of the South event revamped

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1028,3 +1028,7 @@ EVTNAME8413;A new capital;;;;;;;;;;;;;x
 EVTDESC8413;After months of research, the capital proposal is ready. Said proposal is to construct a massive planned city in the heart of the country: Brasília. \n\nThis city would encompass all the essential elements a capital requires—meticulously planned layout, ease of navigation, impeccable organization, a central location, defensibility, and a safe distance from the major urban centers that are susceptible to uprisings. It would stand as a genuine marvel of urban planning, architectural design, and engineering prowess.;;;;;;;;;;;;;x
 EVTOPTA8413;So be it! Start the construction!;;;;;;;;;;;;;x
 EVTOPTB8413;We don't quite have the resources right now, we can start it later.;;;;;;;;;;;;;x
+EVTNAME8420;Star of the South;;;;;;;;;;;;;x
+EVTDESC8420;Near the Bagagem River, a young slave girl has found a priceless treasure: a massive diamond, certainly one of the biggest in the world. The girl, for finding this gem, has been granted her freedom, and since then the diamond, called the Star of the South, has come into our possession.;;;;;;;;;;;;;x
+EVTOPTA8420;Sell it!;;;;;;;;;;;;;x
+EVTOPTB8420;Show it around the world!;;;;;;;;;;;;;x
