--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1572,7 +1572,8 @@ child_emperor_desc;Dom Pedro II grew up on the throne, and the country grew with
 farrapos_compromise_strong;Paz do Poncho Verde;;;;;;;;;;;;;x
 farrapos_compromise_strong_desc;As part of the Poncho Verde Peace Treaty, we agreeded to adjusts the taxes and tarrifs to protect the local Charque producers.;;;;;;;;;;;;;x
 farrapos_compromise_mild;Paz do Poncho Verde;;;;;;;;;;;;;x
-farrapos_compromise_strong_mild;As part of the Poncho Verde Peace Treaty, we agreeded to adjusts the taxes and tarrifs to protect the local Charque producers.;;;;;;;;;;;;;x
+farrapos_compromise_mild_desc;As part of the Poncho Verde Peace Treaty, we agreeded to adjusts the taxes and tarrifs to protect the local Charque producers.;;;;;;;;;;;;;x
 farrapos_compromise_fair;Paz do Poncho Verde;;;;;;;;;;;;;x
-farrapos_compromise_strong_fair;As part of the Poncho Verde Peace Treaty, we agreeded to adjusts the tarrifs to protect the local Charque producers.;;;;;;;;;;;;;x
-praeiros;Praieiros;;;;;;;;;;;;;x
+farrapos_compromise_fair_desc;As part of the Poncho Verde Peace Treaty, we agreeded to adjusts the tarrifs to protect the local Charque producers.;;;;;;;;;;;;;x
+praieiros;Praieiros;;;;;;;;;;;;;x
+balaios;Balaios;;;;;;;;;;;;;x
