Brasilia missing loc

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1028,6 +1028,9 @@ EVTNAME8413;A new capital;;;;;;;;;;;;;x
 EVTDESC8413;After months of research, the capital proposal is ready. Said proposal is to construct a massive planned city in the heart of the country: Brasília. \n\nThis city would encompass all the essential elements a capital requires—meticulously planned layout, ease of navigation, impeccable organization, a central location, defensibility, and a safe distance from the major urban centers that are susceptible to uprisings. It would stand as a genuine marvel of urban planning, architectural design, and engineering prowess.;;;;;;;;;;;;;x
 EVTOPTA8413;So be it! Start the construction!;;;;;;;;;;;;;x
 EVTOPTB8413;We don't quite have the resources right now, we can start it later.;;;;;;;;;;;;;x
+EVTNAME8414;The Inauguration of Brasilia;;;;;;;;;;;;;x
+EVTDESC8414;In a grand and momentous ceremony, Brasília, the city of the future, was officially inaugurated today. Thousands of spectators from all over the country and abroad gathered in the heart of this meticulously planned urban marvel to witness the historic moment. \n\n This is the capital of a country who will lead the world.  This is the capital of a country of the future. We can rest assured that our nation will continue to progress, and this is one of many achievements to come.;;;;;;;;;;;;;x
+EVTOPTA8414;Ordem e Progresso!;;;;;;;;;;;;;x
 EVTNAME8419;Star of the South;;;;;;;;;;;;;x
 EVTDESC8419;Near the Bagagem River, a young slave girl has found a priceless treasure: a massive diamond, certainly one of the biggest in the world. The girl, for finding this gem, has been granted her freedom, and since then the diamond, called the Star of the South, has come into our possession.;;;;;;;;;;;;;x
 EVTOPTA8419;Sell it!;;;;;;;;;;;;;x
