--- a/TGCApocalypse1836/localisation/00_Apocalypse1836.csv
+++ b/TGCApocalypse1836/localisation/00_Apocalypse1836.csv
@@ -41,8 +41,8 @@ ap_end_state_of_emergency_desc;The State of Emergency is no longer needed, we ca
 ap_sieze_assets;Sieze all assets!;;;;;;;;;;;;;x
 ap_sieze_assets_title;Sieze all assets!;;;;;;;;;;;;;x
 ap_sieze_assets_desc;The government must do whatever it takes to ensure our country's survival! In that time of despair, we may sieze all the assets we can from the people. I'm sure they will understand...;;;;;;;;;;;;;x
-ap_scouts_title;Scout for new land;;;;;;;;;;;;;x
-ap_scouts_desc;We can fund expeditions into the uncolonized wasteland and facilitate our colonizing process. By funding expeditions we will gather information about the land around us quicker be able to resettle faster.;;;;;;;;;;;;;x
+ap_scouts_title;Scout for New Land;;;;;;;;;;;;;x
+ap_scouts_desc;We can fund expeditions into the uncolonized wasteland and facilitate our colonizing process. By funding expeditions we will gather information about the land around us quicker and be able to resettle faster.;;;;;;;;;;;;;x
 scouts_activated;Scouting for new land;;;;;;;;;;;;;x
 ap_ritual_title;The Dark Ritual;;;;;;;;;;;;;x
 ap_ritual_desc;With enough holy cities desecrated we can performance a dark ritual that will bring this world as we know it to an end once and for all.;;;;;;;;;;;;;x
