--- a/TGCApocalypse1836/localisation/00_Apocalypse1836.csv
+++ b/TGCApocalypse1836/localisation/00_Apocalypse1836.csv
@@ -43,7 +43,10 @@ ap_sieze_assets_title;Sieze all assets!;;;;;;;;;;;;;x
 ap_sieze_assets_desc;The government must do whatever it takes to ensure our country's survival! In that time of despair, we may sieze all the assets we can from the people. I'm sure they will understand...;;;;;;;;;;;;;x
 ap_scouts_title;Scout for New Land;;;;;;;;;;;;;x
 ap_scouts_desc;We can fund expeditions into the uncolonized wasteland and facilitate our colonizing process. By funding expeditions we will gather information about the land around us quicker and be able to resettle faster.;;;;;;;;;;;;;x
+ap_scouts_turn_off_title;Stop the search for New Land;;;;;;;;;;;;;x
+ap_scouts_turn_off_desc;We are no longer in the position to waste money in the wasteland. We need to take care of what we have first.;;;;;;;;;;;;;x
 scouts_activated;Scouting for new land;;;;;;;;;;;;;x
+scouts_activated_desc;We are scouting for new land around.;;;;;;;;;;;;;x
 ap_ritual_title;The Dark Ritual;;;;;;;;;;;;;x
 ap_ritual_desc;With enough holy cities desecrated we can performance a dark ritual that will bring this world as we know it to an end once and for all.;;;;;;;;;;;;;x
 ap_sacrifice_title;Sacrifice;;;;;;;;;;;;;x
