Brasilic Confederation tag added

--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -5656,6 +5656,9 @@ RGS_fascist_dictatorship;Estado Riograndense;x;
 RGS_colonial_company;Estado do Rio Grande do Sul;x;
 RGS_dominion;Estado do Rio Grande do Sul;x;
 RGS_ADJ;Riograndense;x;
+##### CFB #####;
+CFB;Confederação Brasilica;x;
+CFB_ADJ;Brasilico;x;
 ##### RHI #####;
 RHI_absolute_monarchy;Herzogtum Rheinland;x;
 RHI_prussian_constitutionalism;Herzogtum Rheinland;x;
