--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -860,6 +860,7 @@ MGS_ADJ;Mineiro;;;;;;;;;;;;;x
 GPR_ADJ;Paraense;;;;;;;;;;;;;x
 RJL_ADJ;Julianense;;;;;;;;;;;;;x
 MAR_ADJ;Maranhense;;;;;;;;;;;;;x
+CFB_ADJ;Brasilic;;;;;;;;;;;;;x
 RHI_ADJ;Rhinelander;Rhénan;Rheinlander;;;;;;;;;;;x
 RHO_ADJ;Rhodesian;rhodésien;Rhodesisch;;;;;;;;;;;x
 RIA_ADJ;Riau;;;;;;;;;;;;;x
