Brasilic Confederation Loc

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1577,3 +1577,5 @@ farrapos_compromise_fair;Paz do Poncho Verde;;;;;;;;;;;;;x
 farrapos_compromise_fair_desc;As part of the Poncho Verde Peace Treaty, we agreeded to adjusts the tarrifs to protect the local Charque producers.;;;;;;;;;;;;;x
 praieiros;Praieiros;;;;;;;;;;;;;x
 balaios;Balaios;;;;;;;;;;;;;x
+partido_brasileiro;Brasilian Party;;;;;;;;;;;;;x
+partido_brasileiro;The Brasilian Party is instigating separatism!;;;;;;;;;;;;;x
