Russian province names

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -354,16 +354,16 @@ PROV352;Dorpat;;;;;;;;;;;;;x
 PROV353;Ösel;;;;;;;;;;;;;x
 PROV354;Riga;;;;;;;;;;;;;x
 PROV355;Wolmar;;;;;;;;;;;;;x
-PROV356;Dinaburg;;;;;;;;;;;;;x
+PROV356;Dinaburgu;;;;;;;;;;;;;x
 PROV357;Mitau;;;;;;;;;;;;;x
 PROV358;Windawa;;;;;;;;;;;;;x
 PROV359;Libau;;;;;;;;;;;;;x
-PROV360;Vilna;;;;;;;;;;;;;x
+PROV360;Viljna;;;;;;;;;;;;;x
 PROV361;Kovno;;;;;;;;;;;;;x
-PROV362;Mariyampole;;;;;;;;;;;;;x
-PROV363;Ponevezh;;;;;;;;;;;;;x
+PROV362;Mariampolj;;;;;;;;;;;;;x
+PROV363;Ponevezhu;;;;;;;;;;;;;x
 PROV364;Shavli;;;;;;;;;;;;;x
-PROV365;Telshi;;;;;;;;;;;;;x
+PROV365;Teljshe;;;;;;;;;;;;;x
 PROV366;Aarhus;;;;;;;;;;;;;x
 PROV367;Aalborg;;;;;;;;;;;;;x
 PROV368;Hejls;;;;;;;;;;;;;x
@@ -1045,8 +1045,8 @@ PROV1043;Buzuluk;;;;;;;;;;;;;x
 PROV1044;Orenburg;;;;;;;;;;;;;x
 PROV1045;Ust-Medveditskaya;;;;;;;;;;;;;x
 PROV1046;Nizhne-Chirskaya;;;;;;;;;;;;;x
-PROV1047;Rostov-na-Donu;;;;;;;;;;;;;x
-PROV1048;Yekaterinodar;;;;;;;;;;;;;x
+PROV1047;Rostovu-na-Donu;;;;;;;;;;;;;x
+PROV1048;Jekaterinodaru;;;;;;;;;;;;;x
 PROV1049;Sujuk-Kale;;;;;;;;;;;;;x
 PROV1050;Stavropol;;;;;;;;;;;;;x
 PROV1051;Maykop;;;;;;;;;;;;;x
@@ -3277,7 +3277,7 @@ PROV3275;Kapoea;;;;;;;;;;;;;x
 PROV3276;Kutai Timur;;;;;;;;;;;;;x
 PROV3277;Hultschin;;;;;;;;;;;;;x
 PROV3278;Manifa;;;;;;;;;;;;;x
-PROV3279;Kelmentsi;;;;;;;;;;;;;x
+PROV3279;Keljmentsy;;;;;;;;;;;;;x
 PROV3280;Fort Little Falls;;;;;;;;;;;;;x
 PROV3281;Fraustadt;;;;;;;;;;;;;x
 PROV3282;Olsnitz;;;;;;;;;;;;;x
@@ -3321,7 +3321,7 @@ PROV3319;Groß Kikinda;;;;;;;;;;;;;x
 PROV3320;Kelmis;;;;;;;;;;;;;x
 PROV3321;Mitroviça;;;;;;;;;;;;;x
 PROV3322;Thionville;;;;;;;;;;;;;x
-PROV3323;Konin;;;;;;;;;;;;;x
+PROV3323;Koninu;;;;;;;;;;;;;x
 PROV3324;Line Islands;;;;;;;;;;;;;x
 PROV3325;Rubiás;;;;;;;;;;;;;x
 PROV3326;San Mun;;;;;;;;;;;;;x
@@ -3374,9 +3374,9 @@ PROV3372;Comanchería;;;;;;;;;;;;;x
 PROV3373;Jacmel;;;;;;;;;;;;;x
 PROV3374;Vatican City;;;;;;;;;;;;;x
 PROV3375;Faeto;;;;;;;;;;;;;x
-PROV3376;Ivanograd;;;;;;;;;;;;;x
+PROV3376;Ivanovskaja;;;;;;;;;;;;;x
 PROV3377;Pechory;;;;;;;;;;;;;x
-PROV3378;Novo-Dmitrovskoye;;;;;;;;;;;;;x
+PROV3378;Vyshgorodoku;;;;;;;;;;;;;x
 PROV3379;Kuolajärvi;;;;;;;;;;;;;x
 PROV3380;Tilsit;;;;;;;;;;;;;x
 PROV3381;Shtelmutse;;;;;;;;;;;;;x
@@ -3698,8 +3698,8 @@ PROV3696;Bash-Oba;;;;;;;;;;;;;x
 PROV3697;Penezyqwaj;;;;;;;;;;;;;x
 PROV3698;Armavir;;;;;;;;;;;;;x
 PROV3699;Blagoveshchenskaya;;;;;;;;;;;;;x
-PROV3700;Tamanskaya;;;;;;;;;;;;;x
-PROV3701;Temryuk;;;;;;;;;;;;;x
+PROV3700;Tamanskaja;;;;;;;;;;;;;x
+PROV3701;Temrjuku;;;;;;;;;;;;;x
 PROV3702;Gali;;;;;;;;;;;;;x
 PROV3703;Zugdidi;;;;;;;;;;;;;x
 PROV3704;Ozurgeti;;;;;;;;;;;;;x
@@ -3898,7 +3898,7 @@ PROV3896;Naupa Huen;;;;;;;;;;;;;x
 PROV3897;Pelicurá;;;;;;;;;;;;;x
 PROV3898;Aleksandrovskoye;;;;;;;;;;;;;x
 PROV3899;Bashanta;;;;;;;;;;;;;x
-PROV3900;Eisk;;;;;;;;;;;;;x
+PROV3900;Jejsku;;;;;;;;;;;;;x
 PROV3901;Kavkazkaya;;;;;;;;;;;;;x
 PROV3902;Lazarevskoye;;;;;;;;;;;;;x
 PROV3903;Krasnaya Polyana;;;;;;;;;;;;;x
