--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -984,6 +984,11 @@ EVTOPTX8172;Something else...;;;;;;;;;;;;;x
 EVTNAME8205;The Revival of the Brasilic Confederation;;;;;;;;;;;;;x
 EVTDESC8205;In a surprising turn of events, Brazil has begun financing the revival of the Brasilic Confederation, an Angolan movement with the intention of gaining independence and potentially aligning with the Brazilian Empire. Some view it as a bold and ambitious step, while others are concerned about the potential diplomatic tensions it may create with Portugal, but this obviously put our colonial interests at risk.;;;;;;;;;;;;;x 
 EVTOPTA8205;Traitors!;;;;;;;;;;;;;x
+EVTNAME8206;The Brasilic Confederation Revolts!;;;;;;;;;;;;;x
+EVTDESC8206;\nIn a remarkable and historic development, the Brasilian Party's tireless efforts in Angola have borne fruit. \n\n The Angolan people, inspired by the party's vision of independence and alignment with Brazil, have rallied behind their cause. With the Brasilian Party's leadership at the helm, Angola is now on the brink of a momentous transition.;;;;;;;;;;;;;x
+EVTOPTA8206;So be it! The Brasilic Confederation will do for a nice satellite in Africa!;;;;;;;;;;;;;x
+EVTOPTB8206;Integrate the territory into brazilian command!;;;;;;;;;;;;;x
+EVTOPTC8206;This is was a bad idea from the very start, we can't risk the diplomatic risk.;;;;;;;;;;;;;x
 EVTNAME8400;Il Guarany;;;;;;;;;;;;;x
 EVTDESC8400;O Guarani, composed by Antônio Carlos Gomes and based on the book of same name, just debuted in Milan, and to much appraise of the international community. \n\n It's arguable Antônio Carlos is the first new world composer to be truly accepted in Europe, a true gem of our country showing how the new world is indeed the future!.;;;;;;;;;;;;;x
 EVTOPTA8400;A real gem indeed, bringing our culture and heritage in the world's spot light!;;;;;;;;;;;;;x
