Map and Other Adjustments

--- a/TGC/localisation/00_countries-parties.csv
+++ b/TGC/localisation/00_countries-parties.csv
@@ -5406,13 +5406,13 @@ URU_anarcho_liberal_3;Caudillistas;;;;;;;;;;;;;x
 URU_anarcho_liberal_4;Partido Independiente Demócrata Feminista;;;;;;;;;;;;;x
 URU_communist;Comunistas;;;;;;;;;;;;;x
 URU_communist_1;Partido Comunista de Uruguay;;;;;;;;;;;;;x
-URU_conservative;Conservadores Uruguayos;;;;;;;;;;;;;x
+URU_conservative;Conservadores;;;;;;;;;;;;;x
 URU_conservative_1;Partido Nacional;;;;;;;;;;;;;x
 URU_conservative_2;Partido Conservador;;;;;;;;;;;;;x
 URU_conservative_3;Unión Cívica;;;;;;;;;;;;;x
 URU_conservative_4;Partido Colorado Independiente;;;;;;;;;;;;;x
 URU_fascist;Fascistas;;;;;;;;;;;;;x
-URU_liberal;Liberales Uruguayos;;;;;;;;;;;;;x
+URU_liberal;Liberales;;;;;;;;;;;;;x
 URU_liberal_1;Partido Colorado;;;;;;;;;;;;;x
 URU_liberal_2;Unión Liberal;;;;;;;;;;;;;x
 URU_liberal_3;Partido Liberal;;;;;;;;;;;;;x
