--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3539,13 +3539,13 @@ PROV3537;San Miguel;;;;;;;;;;;;;x
 PROV3538;Incahuasi;;;;;;;;;;;;;x
 PROV3539;Valle de la Luna;;;;;;;;;;;;;x
 PROV3540;Tikopillan;;;;;;;;;;;;;x
-PROV3541;Wataqunchu;;;;;;;;;;;;;x
+PROV3541;Goya;;;;;;;;;;;;;x
 PROV3542;Tacuri;;;;;;;;;;;;;x
 PROV3543;Tupiza;;;;;;;;;;;;;x
 PROV3544;Tarairí;;;;;;;;;;;;;x
 PROV3545;Apolobamba;;;;;;;;;;;;;x
 PROV3546;Zapitalanes;;;;;;;;;;;;;x
-PROV3547;Guairiguaza;;;;;;;;;;;;;x
+PROV3547;Isipirenda;;;;;;;;;;;;;x
 PROV3548;Huirapitindi;;;;;;;;;;;;;x
 PROV3549;Kaa-Iya;;;;;;;;;;;;;x
 PROV3550;Otuquis;;;;;;;;;;;;;x
@@ -3565,7 +3565,7 @@ PROV3563;East Curupayty;;;;;;;;;;;;;x
 PROV3564;Albarenda;;;;;;;;;;;;;x
 PROV3565;Nivaclé-manjui;;;;;;;;;;;;;x
 PROV3566;Labrador de Curuguaty;;;;;;;;;;;;;x
-PROV3567;Encarnacion;;;;;;;;;;;;;x
+PROV3567;Yabotí;;;;;;;;;;;;;x
 PROV3568;Villarrica del Espíritu Santo;;;;;;;;;;;;;x
 PROV3569;Cabeza del Buey;;;;;;;;;;;;;x
 PROV3570;Pwel-Cusu Leuvú;;;;;;;;;;;;;x
@@ -3805,18 +3805,18 @@ PROV3803;San Francisco de Yavi;;;;;;;;;;;;;x
 PROV3804;Ensenada;;;;;;;;;;;;;x
 PROV3805;San Gregorio;;;;;;;;;;;;;x
 PROV3806;West Falkland;;;;;;;;;;;;;x
-PROV3807;Stanley;;;;;;;;;;;;;x
-PROV3808;Port Egmont;;;;;;;;;;;;;x
-PROV3809;Pebble Island;;;;;;;;;;;;;x
+PROV3807;Tareiri;;;;;;;;;;;;;x
+PROV3808;Guairiguaza;;;;;;;;;;;;;x
+PROV3809;Achiras;;;;;;;;;;;;;x
 PROV3810;Keppel Island;;;;;;;;;;;;;x
-PROV3811;Hill Cove;;;;;;;;;;;;;x
-PROV3812;Port Louis;;;;;;;;;;;;;x
-PROV3813;Choiseul;;;;;;;;;;;;;x
-PROV3814;Orqueta;;;;;;;;;;;;;x
+PROV3811;Purranquil;;;;;;;;;;;;;x
+PROV3812;Campo Triste;;;;;;;;;;;;;x
+PROV3813;Paso de los Higos;;;;;;;;;;;;;x
+PROV3814;Urugua-í;;;;;;;;;;;;;x
 PROV3815;San Carlos;;;;;;;;;;;;;x
-PROV3816;Salvador;;;;;;;;;;;;;x
+PROV3816;Ypytú;;;;;;;;;;;;;x
 PROV3817;Monte;;;;;;;;;;;;;x
-PROV3818;Última Esperanza;;;;;;;;;;;;;x
+PROV3818;Río Turbio;;;;;;;;;;;;;x
 PROV3819;Última Esperanza;;;;;;;;;;;;;x
 PROV3820;Turuyuj;;;;;;;;;;;;;x
 PROV3821;Camargo;;;;;;;;;;;;;x
@@ -4008,11 +4008,11 @@ PROV4006;Jaramento;;;;;;;;;;;;;x
 PROV4007;Campo del Cielo;;;;;;;;;;;;;x
 PROV4008;Chokok P’itsehyei;;;;;;;;;;;;;x
 PROV4009;Samu’u;;;;;;;;;;;;;x
-PROV4010;Pozo del Gato;;;;;;;;;;;;;x
+PROV4010;Kengewiñ;;;;;;;;;;;;;x
 PROV4011;Pingüen N'onaxa;;;;;;;;;;;;;x
 PROV4012;Tapenaga;;;;;;;;;;;;;x
 PROV4013;Ombú;;;;;;;;;;;;;x
-PROV4014;Mawo P’itsek;;;;;;;;;;;;;x
+PROV4014;Bituruna;;;;;;;;;;;;;x
 PROV4015;Nacurutu;;;;;;;;;;;;;x
 PROV4016;Chañaritos;;;;;;;;;;;;;x
 PROV4017;Usukhchai;;;;;;;;;;;;;x
