--- a/TGC/localisation/00_crime.csv
+++ b/TGC/localisation/00_crime.csv
@@ -29,3 +29,9 @@ greedy_bankers;Greedy Bankers;;;;;;;;;;;;;x
 desc_greedy_bankers;Without proper administration and a healthy bureaucracy the local banking system becomes corrupt and begins to work in the interest of a few powerful ones.;;;;;;;;;;;;;x
 loansharks;Loansharks;;;;;;;;;;;;;x
 desc_loansharks;Without access to a proper banking system the local population became easy prey for opportunists.;;;;;;;;;;;;;x
+cattle_raiders;Cattle Raiders;;;;;;;;;;;;;x
+desc_cattle_raiders;Outlaws seizing livestock and disrupting the province's rural economy;;;;;;;;;;;;;x
+snake_oil_sellers;Snake Oil Sellers;;;;;;;;;;;;;x
+desc_snake_oil_sellers;Swindlers have found an opportunity to thrive in a province where  oversight and regulation are lacking. Not knowing any better, the population is easy prey to dubious remedies and products.;;;;;;;;;;;;;x
+vigilantes;Vigilantes;;;;;;;;;;;;;x
+desc_vigilantes;With crime on the rise and limited resources for law enforcement, vigilante groups have emerged to take the law into their own hands. These self-appointed guardians of justice can bring order to the chaos, but their methods often lack restraint, leading to potential conflicts and instability within the province.;;;;;;;;;;;;;x
