--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -10,3 +10,4 @@ election_tool_tip_muted;Election Events will be §Gmuted§!, but their results wil
 override_tool_tip;Activate:§G National Campaign.§! \n\n§RWARNING:§! National Campaigns will take a significant amount of money daily! Be careful otherwise you WILL bankrupt!§b;;;;;;;;;;;;x
 claim_tooltip;Get a §YClaim§! on: \n    Misiones \n    Easterm Misiones\n    Corrientes\n    Entre Rios\n    Palma Suela§b;;;;;;;;;;;;x
 acquire_all_claims;Acquire all claimed land;;;;;;;;;;;;x
+break_line_tool_tip;§!\n\n;;;;;;;;;;;;x
