Changes in the updater

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -989,6 +989,10 @@ EVTDESC8206;\nIn a remarkable and historic development, the Brasilian Party's ti
 EVTOPTA8206;So be it! The Brasilic Confederation will do for a nice satellite in Africa!;;;;;;;;;;;;;x
 EVTOPTB8206;Integrate the territory into brazilian command!;;;;;;;;;;;;;x
 EVTOPTC8206;This is was a bad idea from the very start, we can't risk the diplomatic risk.;;;;;;;;;;;;;x
+EVTNAME8301;The Slavery Question;;;;;;;;;;;;;x
+EVTDESC8301;;;;;;;;;;;;;;x
+EVTOPTA8301;We are not yet ready.;;;;;;;;;;;;;x
+EVTOPTB8301;The time to abolish slavery is now!;;;;;;;;;;;;;x
 EVTNAME8400;Il Guarany;;;;;;;;;;;;;x
 EVTDESC8400;O Guarani, composed by Antônio Carlos Gomes and based on the book of same name, just debuted in Milan, and to much appraise of the international community. \n\n It's arguable Antônio Carlos is the first new world composer to be truly accepted in Europe, a true gem of our country showing how the new world is indeed the future!.;;;;;;;;;;;;;x
 EVTOPTA8400;A real gem indeed, bringing our culture and heritage in the world's spot light!;;;;;;;;;;;;;x
