Lots of loc, balance and new stuff

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -990,7 +990,7 @@ EVTOPTA8206;So be it! The Brasilic Confederation will do for a nice satellite in
 EVTOPTB8206;Integrate the territory into brazilian command!;;;;;;;;;;;;;x
 EVTOPTC8206;This is was a bad idea from the very start, we can't risk the diplomatic risk.;;;;;;;;;;;;;x
 EVTNAME8301;The Slavery Question;;;;;;;;;;;;;x
-EVTDESC8301;;;;;;;;;;;;;;x
+EVTDESC8301;Slavery have been an contenduous topic for a good while. The country is heavily dependent on slave work and the aristocracy may not like the idea of losing it's free labor. We need to examine the current status of the country before proceeding with abolition.;;;;;;;;;;;;;x
 EVTOPTA8301;We are not yet ready.;;;;;;;;;;;;;x
 EVTOPTB8301;The time to abolish slavery is now!;;;;;;;;;;;;;x
 EVTNAME8400;Il Guarany;;;;;;;;;;;;;x
