--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3538,3 +3538,7 @@ tugela_river_convention_desc;The Boers of the Natal are becoming increasingly re
 tugela_river_convention_title;Tugela River Convention;La convention d'Tugela River;Tugela River Convention;;;;;;;;;;;x
 brasilic_confederation_1_title;Fund the Brasilic Confederation;;;;;;;;;;;;;x
 brasilic_confederation_1_desc;The Brasilic Confederation was an Angolan movement spear-headed by their Brasilian Party with the intention of gaining independence and joining our Empire. In the 20s, we found ourselves unable to offer support due lack of resources and to concerns about potential diplomatic tensions. However, as we have since solidified our great power status, it is now possible for us to challenge diplomatic boundaries and fund for resurgence of the party.;;;;;;;;;;;;;x
+reform_brazil_title;Reform Brazil;;;;;;;;;;;;;x
+reform_brazil_desc;Brazil as a country has ceased to exist. But deep inside, we are still brazilians, there's no denying. With all the brazilian people under or sphere of influence we can reclaim the title of Brazil, and reforge the once broken country under our views.;;;;;;;;;;;;;x
+relinquish_brazil_title;Relinquish the brazilian identity;;;;;;;;;;;;;x
+relinquish_brazil_desc;Talks about the idea of reforming the brazilian state has been always in the heir. But Brazil is long gone. \n\nThe brazilian dream failed once, and that's enough. $COUNTRY$, that's what we are, and that's about it.;;;;;;;;;;;;;x
