--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3541,4 +3541,4 @@ brasilic_confederation_1_desc;The Brasilic Confederation was an Angolan movement
 reform_brazil_title;Reform Brazil;;;;;;;;;;;;;x
 reform_brazil_desc;Brazil as a country has ceased to exist. But deep inside, we are still brazilians, there's no denying. With all the brazilian people under or sphere of influence we can reclaim the title of Brazil, and reforge the once broken country under our views.;;;;;;;;;;;;;x
 relinquish_brazil_title;Relinquish the brazilian identity;;;;;;;;;;;;;x
-relinquish_brazil_desc;Talks about the idea of reforming the brazilian state has been always in the heir. But Brazil is long gone. \n\nThe brazilian dream failed once, and that's enough. $COUNTRY$, that's what we are, and that's about it.;;;;;;;;;;;;;x
+relinquish_brazil_desc;Talks about the idea of reforming the brazilian state have been always in the air. But Brazil is long gone. \n\nThe brazilian dream failed once, and that's enough. $COUNTRY$, that's what we are, and that's about it.;;;;;;;;;;;;;x
