Confederação do Equador formable added back

--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -1151,3 +1151,4 @@ ZBW_ADJ;Zimbabwean;;;;;;;;;;;;;x
 ZFN_ADJ;Kurdish;;;;;;;;;;;;;x
 ZOU_ADJ;Trekker;;;;;;;;;;;;;x
 ZUL_ADJ;Zulu;Zoulou;Zulu;;;;;;;;;;;x
+CEQ_ADJ;Equatorian;;;;;;;;;;;x
