--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -515,6 +515,10 @@ BRZ_dominion;Kingdom of Brazil;;;;;;;;;;;;;x
 BRZ_hms_government;Empire of Brazil;;;;;;;;;;;;;x
 BRZ_proletarian_dictatorship;Brazilian Co-Prosperity Sphere;;;;;;;;;;;;;x
 BRZ_prussian_constitutionalism;Empire of Brazil;;;;;;;;;;;;;x
+CEQ_absolute_monarchy;Equator Empire;;;;;;;;;;;;;x
+CEQ_hms_government;Equator Empire;;;;;;;;;;;;;x
+CEQ_prussian_constitutionalism;Equator Empire;;;;;;;;;;;;;x
+CEQ_proletarian_dictatorship;Commune of Equator;;;;;;;;;;;;;x
 BSH_absolute_monarchy;Basutoland;;;;;;;;;;;;;x
 BSQ_fascist_dictatorship;Euskadi;;;;;;;;;;;;;x
 BUG_absolute_monarchy;Buganda;;;;;;;;;;;;;x
