--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -115,6 +115,7 @@ BRT;Brittany;;;;;;;;;;;;;x
 BRU;Brunei;Brunei;Brunei;;;;;;;;;;;x
 BRY;Buryatia;;;;;;;;;;;;;x
 BRZ;Brazil;Brásil;Brasilien;;;;;;;;;;;x
+CEQ;Confederation of the Equator;;;;;;;;;;;;;x
 BSH;Lesotho;Basotho;Basotho;;;;;;;;;;;x
 BSQ;Basque Country;;;;;;;;;;;;;x
 BSR;al-Mazkur;;;;;;;;;;;;;x
