--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3542,3 +3542,8 @@ reform_brazil_title;Reform Brazil;;;;;;;;;;;;;x
 reform_brazil_desc;Brazil as a country has ceased to exist. But deep inside, we are still brazilians, there's no denying. With all the brazilian people under or sphere of influence we can reclaim the title of Brazil, and reforge the once broken country under our views.;;;;;;;;;;;;;x
 relinquish_brazil_title;Relinquish the brazilian identity;;;;;;;;;;;;;x
 relinquish_brazil_desc;Talks about the idea of reforming the brazilian state have been always in the air. But Brazil is long gone. \n\nThe brazilian dream failed once, and that's enough. $COUNTRY$, that's what we are, and that's about it.;;;;;;;;;;;;;x
+reform_ceq_title;Reform the Confederation of the Equator;;;;;;;;;;;;;x
+reform_ceq_desc;With the entire region under our sphere, it's possible to revive the old Conferation of the Equator and unify the Nordeste under our own flag.;;;;;;;;;;;;;x
+relinquished_brazil;Relinquished the brazilian hereditary;;;;;;;;;;;;;;x
+claim_grão_para_title;;;;;;;;;;;;;;x
+claim_grão_para_desc;;;;;;;;;;;;;;;x
