bug fixes, grão para integration

--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3545,5 +3545,5 @@ relinquish_brazil_desc;Talks about the idea of reforming the brazilian state hav
 reform_ceq_title;Reform the Confederation of the Equator;;;;;;;;;;;;;x
 reform_ceq_desc;With the entire region under our sphere, it's possible to revive the old Conferation of the Equator and unify the Nordeste under our own flag.;;;;;;;;;;;;;x
 relinquished_brazil;Relinquished the brazilian hereditary;;;;;;;;;;;;;;x
-claim_grão_para_title;;;;;;;;;;;;;;x
-claim_grão_para_desc;;;;;;;;;;;;;;;x
+claim_grao_para_title;Integrate Grão Para;;;;;;;;;;;;;x
+claim_grao_para_desc;The old province of Grão Para is a fellow former brazilian state and share lots of cultural traits with us, it's only natural for us to expand our influence east.;;;;;;;;;;;;;;x
